Login and Authentication Completed. :) 👍😎

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".ui.auth.LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
@@ -14,10 +14,11 @@
 
         <TextView
             android:id="@+id/welcome_tv"
+            android:textColor="@color/purple_700"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="64dp"
             android:text="Welcome to Dextro"
             android:textSize="32sp"
             app:layout_constraintEnd_toEndOf="parent"
