--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -3,17 +3,21 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/refresh_layout">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".VerifyOtpActivity">
+        tools:context=".ui.auth.VerifyOtpActivity">
 
         <TextView
             android:id="@+id/verify_no_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="64dp"
+            android:textColor="@color/purple_700"
             android:layout_marginHorizontal="16dp"
             android:text="Verify 9677066202"
             android:textSize="24sp"
@@ -25,7 +29,7 @@
             android:id="@+id/helper_txt_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_margin="32dp"
             android:gravity="center"
             android:text="@string/waiting_info_txt"
             android:layout_marginVertical="16dp"
@@ -67,7 +71,7 @@
                 android:gravity="center"
                 android:maxLength="6"
                 android:inputType="number"
-                android:hint="-------"
+                android:hint="------"
                 android:textSize="32sp" />
 
 
@@ -89,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
 
-            android:text="Verify Phone Number"
+            android:text="Verify OTP"
             app:layout_constraintTop_toBottomOf="@+id/otp_helper_txt"
             tools:layout_editor_absoluteX="32dp" />
 
@@ -103,5 +107,5 @@
             app:layout_constraintTop_toBottomOf="@+id/verify_otp_btn"
             tools:layout_editor_absoluteX="32dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
