--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -1,112 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/refresh_layout">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.auth.VerifyOtpActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-        <TextView
-            android:id="@+id/verify_no_title_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
-            android:textColor="@color/purple_700"
-            android:layout_marginHorizontal="16dp"
-            android:text="Verify 9677066202"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/helper_txt_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="32dp"
-            android:gravity="center"
-            android:text="@string/waiting_info_txt"
-            android:layout_marginVertical="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/verify_no_title_tv" />
-
-        <TextView
-            android:id="@+id/helper_txt2_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:visibility="gone"
-            android:gravity="center"
-            android:text="You can resend another OTP in 50s"
-            android:layout_marginVertical="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/helper_txt_tv" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/otp_til"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:boxBackgroundColor="@color/white"
-            android:minEms="8"
-            app:hintEnabled="false"
-            app:boxStrokeWidth="2dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/helper_txt2_tv">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/otp_tiet"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:letterSpacing="0.8"
-                android:gravity="center"
-                android:maxLength="6"
-                android:inputType="number"
-                android:hint="------"
-                android:textSize="32sp" />
+                tools:context=".ui.auth.VerifyOtpActivity">
+
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/refresh_layout"
+                    android:layout_width="match_parent"
+                    android:indeterminate="true"
+                    app:indicatorDirectionLinear="startToEnd"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/verify_no_title_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="64dp"
+                    android:text="Verify 9677066202"
+                    android:textColor="@color/purple_700"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/helper_txt_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="32dp"
+                    android:layout_marginVertical="16dp"
+                    android:gravity="center"
+                    android:text="@string/waiting_info_txt"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/verify_no_title_tv" />
+
+                <TextView
+                    android:id="@+id/helper_txt2_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:layout_marginVertical="16dp"
+                    android:gravity="center"
+                    android:text="You can resend another OTP in 50s"
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/helper_txt_tv" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/otp_til"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:minEms="8"
+                    app:boxBackgroundColor="@color/white"
+                    app:boxStrokeWidth="2dp"
+                    app:hintEnabled="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/helper_txt2_tv">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/otp_tiet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:hint="------"
+                        android:inputType="number"
+                        android:letterSpacing="0.8"
+                        android:maxLength="6"
+                        android:textSize="32sp" />
 
 
-        </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/otp_helper_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:text="Enter 6-digit OTP"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/otp_til" />
+                <TextView
+                    android:id="@+id/otp_helper_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="Enter 6-digit OTP"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/otp_til" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/verify_otp_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/verify_otp_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
 
-            android:text="Verify OTP"
-            app:layout_constraintTop_toBottomOf="@+id/otp_helper_txt"
-            tools:layout_editor_absoluteX="32dp" />
+                    android:text="Verify OTP"
+                    app:layout_constraintTop_toBottomOf="@+id/otp_helper_txt"
+                    tools:layout_editor_absoluteX="32dp" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/resend_otp_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:enabled="false"
-            android:text="Resend OTP"
-            app:layout_constraintTop_toBottomOf="@+id/verify_otp_btn"
-            tools:layout_editor_absoluteX="32dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/resend_otp_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:enabled="false"
+                    android:text="Resend OTP"
+                    app:layout_constraintTop_toBottomOf="@+id/verify_otp_btn"
+                    tools:layout_editor_absoluteX="32dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
 </layout>
