--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,24 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowActionBar">false</item>
     </style>
+
+    <style name="outgoing_msg_item_shape">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeBottomLeft">22dp</item>
+        <item name="cornerSizeBottomRight">22dp</item>
+        <item name="cornerSizeTopLeft">22dp</item>
+        <item name="cornerSizeTopRight">0dp</item>
+    </style>
+
+    <style name="incoming_msg_item_shape">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeBottomLeft">22dp</item>
+        <item name="cornerSizeBottomRight">22dp</item>
+        <item name="cornerSizeTopLeft">0dp</item>
+        <item name="cornerSizeTopRight">22dp</item>
+    </style>
+    
+    <style name="incoming_msg_theme">
+
+    </style>
 </resources>
