--- a/app/src/main/res/layout/msg_item_layout.xml
+++ b/app/src/main/res/layout/msg_item_layout.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".ui.main.ChatActivity"
     android:paddingHorizontal="16dp"
     android:paddingVertical="4dp"
-    android:layout_marginEnd="30dp">
+    style="?msg_layout">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:elevation="0dp"
+        style="?msg_card_style"
         app:cardBackgroundColor="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearance="@style/incoming_msg_item_shape">
+        tools:ignore="MissingConstraints">
 
         <com.google.android.flexbox.FlexboxLayout
             android:layout_width="wrap_content"
