- squashed some major bugs, updated ui

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="64dp"
-            android:text="Welcome to Dextro"
+            android:text="@string/welcome_to_dextro"
             android:textSize="32sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,8 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
-            android:text="Verify your number"
-            android:textSize="18dp"
+            android:text="@string/verify_your_number"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="Please Enter Your Mobile Number."
+            android:text="@string/please_enter_your_mobile_number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/verify_title_tv" />
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:text="You'll receive an one-time-password."
+            android:text="@string/you_ll_receive_an_one_time_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/helper_txt_1_tv" />
@@ -101,7 +101,7 @@
                 android:imeActionId="6"
                 android:imeActionLabel="Send"
                 android:imeOptions="actionUnspecified"
-                android:inputType="phone"
+                android:inputType="number"
                 android:maxLength="10"
                 android:maxLines="1"
                 android:textSize="20sp"
@@ -116,7 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:enabled="false"
-            android:text="Verify"
+            android:text="@string/verify"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/phone_num_til" />
