--- a/app/src/main/res/layout/user_item_layout.xml
+++ b/app/src/main/res/layout/user_item_layout.xml
@@ -1,73 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
         android:clickable="true"
-        android:focusable="true"
-        android:background="?attr/selectableItemBackground">
+        android:focusable="true">
 
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/user_iv"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            app:shapeAppearanceOverlay="@style/CircularImageView"
             android:src="@drawable/ic_baseline_person_24"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
-            app:layout_constraintTop_toTopOf="@id/guideline_top"/>
+            app:layout_constraintTop_toTopOf="@id/guideline_top"
+            app:shapeAppearanceOverlay="@style/CircularImageView" />
 
         <TextView
             android:id="@+id/title_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
-            android:text="User Name"
+            android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:lines="1"
-            android:textSize="20sp"
+            android:text="@string/user_name"
+            android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/sub_title_tv"
             app:layout_constraintEnd_toStartOf="@+id/time_tv"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/user_iv"
-            app:layout_constraintTop_toTopOf="@id/user_iv" />
+            app:layout_constraintTop_toTopOf="@+id/user_iv"
+            app:layout_constraintVertical_chainStyle="spread" />
 
         <TextView
             android:id="@+id/time_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:lines="1"
-            android:textSize="16sp"
-            android:text="12/8/22"
+            android:text="@string/date"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/count_tv"
             app:layout_constraintEnd_toStartOf="@id/guideline_end"
-            app:layout_constraintTop_toBottomOf="@id/guideline_top"/>
+            app:layout_constraintTop_toTopOf="@+id/guideline_top" />
 
         <TextView
             android:id="@+id/sub_title_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginBottom="4dp"
             android:ellipsize="end"
             android:lines="1"
-            android:layout_marginBottom="8dp"
-            android:layout_marginHorizontal="8dp"
-            android:textSize="16dp"
-            android:text="this is a recent msg"
+            android:maxWidth="20dp"
+            android:text="@string/this_is_a_recent_msg"
+            android:textSize="16sp"
 
+            app:layout_constraintBottom_toBottomOf="@+id/user_iv"
+            app:layout_constraintEnd_toStartOf="@+id/time_tv"
             app:layout_constraintStart_toEndOf="@id/user_iv"
-            app:layout_constraintBottom_toBottomOf="@id/user_iv"/>
+            app:layout_constraintTop_toBottomOf="@+id/title_tv" />
 
         <TextView
             android:id="@+id/count_tv"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="2dp"
-            android:text="1"
-            android:visibility="gone"
-            android:textColor="@color/white"
-            android:background="@drawable/count_bg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="4dp"
+            android:background="@drawable/count_bg"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="2dp"
+            android:text="@string/_1"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/sub_title_tv"
             app:layout_constraintEnd_toStartOf="@id/guideline_end"
-            app:layout_constraintTop_toTopOf="@id/sub_title_tv"/>
+            app:layout_constraintStart_toStartOf="@+id/time_tv"
+            app:layout_constraintTop_toBottomOf="@+id/time_tv" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_top"
@@ -75,13 +88,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="16dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_end="16dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_start"
