--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -30,7 +30,7 @@
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="64dp"
                     android:text="Verify 9677066202"
-                    android:textColor="@color/purple_700"
+                    android:textColor="?attr/colorPrimary"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:minEms="8"
-                    app:boxBackgroundColor="@color/white"
+                    app:boxBackgroundColor="#00FFFFFF"
                     app:boxStrokeWidth="2dp"
                     app:hintEnabled="false"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +80,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:hint="------"
+                        android:hint="@string/dotted_lines"
                         android:inputType="number"
                         android:letterSpacing="0.8"
                         android:maxLength="6"
