--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -49,7 +49,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/inputBox"
-        android:layout_below="@+id/material_toolbar">
+        android:layout_below="@+id/material_toolbar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp">
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -100,7 +104,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="10dp"
                     android:layout_toEndOf="@id/emoji_btn"
-                    android:background="@android:color/white"
+                    android:background="#00FFFFFF"
                     android:gravity="top|start"
                     android:hint="@string/type_your_message"
                     android:imeOptions="actionGo"
@@ -122,18 +126,18 @@
             android:id="@+id/send_msg_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:tint="@color/white"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
             android:layout_marginStart="8dp"
-
-            app:contentPadding="8dp"
-            app:contentPaddingLeft="12dp"
-            app:shapeAppearance="@style/CircularImageView"
-            android:background="@color/teal_700"
+            android:elevation="5dp"
+            android:background="?attr/colorPrimary"
             android:clickable="true"
             android:focusable="true"
-            android:src="@drawable/ic_round_send_24" />
+            android:src="@drawable/ic_round_send_24"
+            android:tint="@color/white"
+            app:contentPadding="8dp"
+            app:contentPaddingLeft="12dp"
+            app:shapeAppearance="@style/CircularImageView" />
     </RelativeLayout>
 
 
