--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="64dp"
                 android:text="@string/profile_info"
-                android:textColor="@color/purple_500"
+                android:textColor="?attr/colorPrimary"
                 android:textSize="32sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:minEms="18"
-                app:boxBackgroundColor="@color/white"
+                app:boxBackgroundColor="#00FFFFFF"
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
                 app:layout_constraintEnd_toEndOf="parent"
