--- a/app/src/main/res/layout/date_section_header_msg_item_layout.xml
+++ b/app/src/main/res/layout/date_section_header_msg_item_layout.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
         app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/teal_700"
+        app:cardBackgroundColor="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
