--- a/app/src/main/res/layout/outgoing_msg_item_layout.xml
+++ b/app/src/main/res/layout/outgoing_msg_item_layout.xml
@@ -14,7 +14,7 @@
         android:id="@+id/messageCardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#484949"
+        app:cardBackgroundColor="?attr/colorPrimary"
         app:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
